--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,57 @@
-.App {
-  text-align: center;
+body {
+  /*border: 10px solid #211F30;*/
+  background-color: #EAEAEA;
+  color: #E29930;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+nav a {
+  color: #E29930;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+
+.site-content {
+  margin-top: 15px;
 }
 
-.App-title {
-  font-size: 1.5em;
+footer {
+  position: fixed;
+  bottom: 2%;
+  left: 41%;
 }
 
-.App-intro {
-  font-size: large;
+.main {
+  position: absolute;
+  top: 42%;
+  left: 35%;
 }
 
-.home-card {
-  background-color: blue;
-  color: white;
+
+#top, #bottom, #left, #right {
+  background: #E29930;
+  position: fixed;
+}
+#left, #right {
+  top: 0; bottom: 0;
+  width: 1.5%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#left { left: 0; }
+#right { right: 0; }
+  
+#top, #bottom {
+  left: 0; right: 0;
+  height: 1.5%;
 }
+
+#top { top: 0; }
+#bottom { bottom: 0; }
+/*nav {
+  background-color: #211F30;
+}
+
+footer {
+  background-color: #211F30;
+}*/
