--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   color: #E29930;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 nav a {
@@ -16,16 +16,18 @@ nav a {
   margin-top: 15px;
 }
 
-footer {
+footer.footer {
   position: fixed;
+  width: 100%;
   bottom: 2%;
-  left: 41%;
+  text-align: center;
 }
 
-.main {
+.middle {
   position: absolute;
   top: 42%;
   left: 35%;
+  text-align: center;
 }
 
 
@@ -35,7 +37,7 @@ footer {
 }
 #left, #right {
   top: 0; bottom: 0;
-  width: 1.5%;
+  width: 1%;
 }
 
 #left { left: 0; }
@@ -46,6 +48,31 @@ footer {
   height: 1.5%;
 }
 
+#contact-bubbles {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3vh
+/*  clear: both;*/
+}
+
+.contact-bubble {
+  flex: auto;
+  /*display: inline-flex;*/
+ /* float: left;*/
+}
+
+.social-icon {
+  width: 10vw;
+  margin-right: 1vw;
+
+}
+
+.email-contact{
+/*  clear: both;*/
+}
+
+
 #top { top: 0; }
 #bottom { bottom: 0; }
 /*nav {
@@ -55,3 +82,44 @@ footer {
 footer {
   background-color: #211F30;
 }*/
+
+.model {
+  position: absolute;
+  top:      10%;
+  left:     5%;
+  bottom:   0;
+  right:    0;
+  width:    90%;
+  height:   82%;
+  background: #FFFFFF;
+}
+
+#about-me {
+  position: absolute;
+  top: 35%;
+  left: 30%;
+}
+
+.project {
+  position: absolute;
+  overflow: scroll;
+  top: 30%;
+  text-align: center;
+  max-height: 70vh;
+  width: auto;
+  display:block;
+  margin:auto;
+}
+
+
+
+.project-image {
+ max-width: 100%;
+ max-height: 50vh;
+ height: auto;
+ object-fit: contain;
+}
+
+.projects .col-md-2 {
+  margin-top: 25%;
+}
