--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 body {
-  /*border: 10px solid #211F30;*/
-  background-color: #EAEAEA;
-  color: #E29930;
+  background-color: lightgray;
+  color: #001f3f;
   width: 100%;
   height: 100%;
+  font-family: 'Nanum Gothic', sans-serif;
+}
 
+a {
+  color: black;
+  font-weight: bold;
 }
 
 #homepage h1,p {
@@ -18,7 +22,7 @@ body {
 }
 
 nav a {
-  color: #E29930;
+  color: #001f3f;
 }
 
 
@@ -45,7 +49,7 @@ footer.footer {
 
 
 #top, #bottom, #left, #right {
-  background: #E29930;
+  background: #001f3f;
   position: fixed;
 }
 #left, #right {
@@ -62,17 +66,18 @@ footer.footer {
 }
 
 #contact-bubbles {
-  width: 100%;
   display: flex;
   justify-content: center;
   margin-bottom: 3vh
 /*  clear: both;*/
 }
 
+#contact-page {
+  text-align: center;
+}
+
 .contact-bubble {
   flex: auto;
-  /*display: inline-flex;*/
- /* float: left;*/
 }
 
 .social-icon {
@@ -81,9 +86,7 @@ footer.footer {
 
 }
 
-.email-contact{
-/*  clear: both;*/
-}
+
 
 
 #top { top: 0; }
@@ -109,33 +112,6 @@ footer {
 
 #about-me {
   height: inherit;
-  text-align: center;
-/*  position: absolute;
-  width: 100%;
-  text-align: center;
-  top: 35%;*/
-}
-
-.project {
-  position: absolute;
-  overflow: auto;
-  top: 30%;
-  text-align: center;
-  max-height: 70vh;
-  width: auto;
-  display:block;
-  margin:auto;
-}
-
-
-
-.project-image {
- max-width: 100%;
- max-height: 50vh;
- height: auto;
- object-fit: contain;
-}
-
-.projects .col-md-2 {
-  margin-top: 25%;
+  text-align: justify;
+  line-height: 2;
 }
